--- a/malaria-ios/Base.lproj/Main.storyboard
+++ b/malaria-ios/Base.lproj/Main.storyboard
@@ -1130,7 +1130,7 @@
                                         <rect key="frame" x="21" y="20" width="527" height="197.5"/>
                                         <color key="backgroundColor" red="0.97647058819999999" green="0.94509803920000002" blue="0.87058823529999996" alpha="1" colorSpace="calibratedRGB"/>
                                     </view>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VB8-6y-hHC" userLabel="ProgressCircle" customClass="CircleProgressView" customModule="malaria_ios" customModuleProvider="target">
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VB8-6y-hHC" userLabel="ProgressCircle" customClass="CircleProgressView" customModule="CircleProgressView">
                                         <rect key="frame" x="241.5" y="83" width="85" height="85"/>
                                         <color key="backgroundColor" red="0.97647058819999999" green="0.94509803920000002" blue="0.87058823529999996" alpha="0.97999999999999998" colorSpace="calibratedRGB"/>
                                         <constraints>
